fix:: res return friend request
